--- a/war/WEB-INF/views/views.xml
+++ b/war/WEB-INF/views/views.xml
@@ -22,5 +22,9 @@
 	<definition extends="default" name="errorPage">
 		<put-attribute name="body" value="/WEB-INF/views/errorPage.jsp" />
 	</definition>
+	
+	<definition extends="default" name="sobre">
+		<put-attribute name="body" value="/WEB-INF/views/sobre.jsp" />
+	</definition>
 
 </tiles-definitions>
